# InCom

./: .flaskenv  .gitignore  app.db  app.py  config.py  incom.py  messages.pot  pyproject.toml  requirements.txt  rozne.py  testy_pdf.py  various.py
app/: __init__.py  errors.py  forms.py  models.py  routes.py
app/templates/: 404.html  500.html  _registration.html  all_complaints.html  all_registrations.html  base.html  basic_chart.html  complaints_all.html  complaints_user.html  index.html  login.html  new_area.html  new_registration.html  nowa_tablica.html  profile.html  report.html  report_pdf.html  tabela_user.html  user.html  user_complaints.html  user_registrations.html
app/templates/auth/: login.html
app/templates/charts/: ic_quantity_all_weeks.html  ic_quantity_by_cause.html  ic_quantity_current_week.html  pie_chart.html
app/templates/errors/: 404.html  500.html
app/translations/pl/LC_MESSAGES/: messages.mo  messages.po
migrations/versions/: 04ceff8f177c_detection_areas_2.py  0e2947cabe98_.py  127327943bb9_detection_areas.py  21e7e2bab200_.py  233117c8f49c_.py  2a02f9b0c904_users_table.py  336eac70887b_.py  52cf95c88d21_.py  5e7e733ef119_.py  626be6c0d21e_.py  7b58addd2fce_posts_table.py  888456d88cd4_.py  d012ad8445df_change_of_names.py  db344b13a55a_.py  e0d5cb92baa0_.py  fd2f1f34973f_detection_areas_2.py
